--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Rong Ding"
-description              : "Ph.D. Candidate (2021-Now) at Department of Computer Science and Engineering, Shanghai Jiao Tong University"
+description              : "Ph.D. Candidate at School of Computer Science, Shanghai Jiao Tong University"
 repository               : "Dingrong123/RongDing.github.io"
 google_scholar_stats_use_cdn : false
 
@@ -24,7 +24,7 @@ author:
   name             : "Rong Ding"
   avatar           : "RongDing.jpg"
   bio              : 
-  location         : "Shanghai, China"
+  location         : 
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=nbctAEIAAAAJ"
